[package]
name = "hawk"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.11.1"
async-session = "3.0.0"
async-trait = "0.1.56"
axum = { version = "0.5.11", features = [ "headers", "multipart" ] }
axum-extra = { version = "0.3.4", features = [ "spa" ] }
axum-server = { version = "0.4.0", features = [ "tls-rustls" ] }
bcrypt = "0.13.0"
clap = { version = "3.2.8", features = [ "derive" ] }
cookie = "0.16.0"
http = "0.2.8"
image = { version = "0.24.2", default-features = false, features = [ "webp" ] }
infer = "0.9.0"
nanoid = "0.4.0"
once_cell = "1.12.0"
serde = { version = "1.0.138", features = [ "derive" ] }
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "sqlite", "macros", "migrate", "uuid" ] }
thiserror = "1.0.31"
time = "0.3.11"
tokio = { version = "1.19.2", features = [ "macros", "rt-multi-thread", "fs", "process", "signal" ] }
tower = "0.4.12"
tower-cookies = "0.7.0"
tower-http = { version = "0.3.4", features = [ "auth", "compression-br", "compression-deflate", "compression-gzip", "metrics", "trace" ] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
uuid = { version = "1.1.2", features = [ "v4", "serde" ] }

[profile.dev.package.'*']
opt-level = 3
